--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,70 @@
 /* Move your styles here when you're ready to clean up your HTML file */
 /* Don't forget to link to this file in your HTML, otherwise your styles won't show up! */
+
+html {
+  font-size: 25px;
+}
+
+body {
+  background-color: ghostwhite;
+}
+
+ header {
+   border-bottom: 15px powderblue double;
+ }
+
+ h1,
+ h2 {
+   font-family: monospace;
+ }
+
+ .class-list {
+   list-style-type: square;
+ }
+
+ .item {
+   border: 2px dotted powderblue;
+ }
+
+ .even {
+   background-color: grey;
+ }
+
+ .odd {an+b
+   background-color: black;
+   color: white;
+ }
+
+ #item1 {
+   font-size: 30px;
+ }
+
+ #item2 {
+   text-align: right;
+ }
+
+
+#advanced-selectors ol > li {
+  padding: 5px;
+  background-color: red;
+}
+
+#advanced-selectors ol li:nth-child(2n+1) {
+  background-color: green;
+}
+
+a[title="Bitmaker"]:hover {
+  text-decoration: none;
+}
+
+#advanced-selectors ol li > li {
+
+}
+
+#advanced-selectors ol li li a:hover {
+  background-color: yellow;
+}
+
+#advanced-selectors ol li li a:active {
+  background-color: red;
+}
